<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" > 
	<LinearLayout
	android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/txt_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/edit_txt" />
	
	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/topping"
		android:layout_margin="16dp"
		android:textSize="@dimen/headers" />
		

    <CheckBox 
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="16dp"
		android:paddingLeft="24dp"
		android:text="@string/choxo"
		android:inputType="textCapWords"
		android:textSize="18sp" />

    <CheckBox 
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="16dp"
		android:layout_marginTop="8dp"
		android:paddingLeft="24dp"
		android:text="@string/whipx"
		android:textSize="18sp" />

    <TextView
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="16dp"
		android:layout_marginTop="16dp"
		android:text="@string/quantx"
		android:textAllCaps="true"
		android:textAppearance="?android:textAppearanceLarge" />

    <LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:layout_margin="16dp">

		<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/minux"
			android:textSize="20sp"
			android:onClick="Decrement" />

		<TextView
			android:id="@+id/quantity"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginRight="8dp"
			android:layout_marginLeft="8dp"
			android:text="@string/quanx"
			android:textSize="26sp" />

		<Button
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/plux"
			android:textSize="20sp"
			android:onClick="Increment"/>


    </LinearLayout>

    <Button
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_margin="16dp"
		android:text="@string/sub_btn"
		android:textSize="18sp"
		android:onClick="calculatePrice" />

	</LinearLayout>

</ScrollView>

